<resources>
    <string name="app_name">ESEOASIS</string>
    <string name="app_name_family">Généalogie</string>
    <string name="app_name_order">Votre commande</string>
    <string name="app_name_tickets">Vos réservations</string>
    <string name="app_name_sales">Faire une réservation</string>
    <string name="app_name_shuttles">Choisir une navette</string>
    <string name="app_version_name">1.0.7</string>
    <string name="app_version_code">41</string>
    <string name="app_copyright">None</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="action_info">À propos</string>
    <string name="action_read">Fermer</string>
    <string name="action_share">Partager</string>
    <string name="action_lydia">Payer avec Lydia</string>
    <string name="action_browser">Ouvrir dans le navigateur</string>
    <string name="action_plans_details">Afficher le plan complet</string>
    <string name="action_sort">Trier</string>
    <string name="action_search">Rechercher ...</string>
    <string name="text_edit_profile">Votre profil ESEO est nécessaire pour pouvoir accéder à certaines fonctionnalités, comme la commande à la caféteria ou l\'accès aux réservations.\nUne fois la connexion validée, uniquement votre identifiant, nom et prénom sont conservés jusqu\'à votre déconnexion, rien de plus.</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rutrum, urna a suscipit efficitur, nisl felis laoreet tellus, non gravida enim nisl sed ex. Mauris posuere metus et enim pretium venenatis. In neque diam, sodales sit amet porta quis, rhoncus ac dolor. Aliquam id lectus viverra, gravida erat non, cursus dolor. Quisque vel consequat odio, eu placerat tellus. Aliquam eleifend diam ac lacus posuere dictum. Aliquam ipsum nisi, consectetur eu est et, consequat varius magna. In risus nisl, dictum id ante molestie, sagittis suscipit justo. Aliquam erat volutpat. Nulla eu ligula nulla. Maecenas commodo massa ut odio condimentum tincidunt. Aliquam eu urna a ex gravida porta. Morbi porta imperdiet dapibus. Duis ultrices id ipsum eget rutrum.

Phasellus facilisis condimentum nisi, sit amet vulputate elit. Nulla venenatis ornare odio, eget sollicitudin erat consectetur sed. Etiam nec tempor magna. Duis ut varius turpis. Suspendisse iaculis consequat justo, in venenatis sem fringilla non. In fermentum quam sed feugiat vehicula. Aliquam faucibus gravida erat, vel porttitor libero dignissim ac. Etiam dapibus tortor vestibulum, blandit diam sit amet, semper quam. Nunc et ornare dui, eu posuere lorem. Integer consectetur metus quis massa porttitor volutpat. Aenean sapien nisl, rhoncus id sem id, vestibulum interdum arcu. Integer condimentum nisl ligula, id pretium neque porttitor in. Fusce tellus mauris, finibus et elit vitae, sodales tempus ipsum. Morbi nec leo maximus, rutrum nisl sed, sollicitudin erat.

Maecenas viverra nisl sit amet nibh maximus vestibulum. Vivamus et arcu non enim consectetur placerat. In rhoncus in diam at hendrerit. Quisque vitae malesuada tellus, sed condimentum ligula. Etiam viverra posuere massa. Sed quis risus at metus cursus rhoncus. In ultricies fermentum ligula sit amet convallis. Morbi sollicitudin vel eros eget laoreet. Integer convallis ullamcorper orci, id condimentum nisl viverra et. Curabitur id interdum dui, vel viverra nunc. Aenean sed ullamcorper diam. Curabitur efficitur vehicula nunc et sodales. Cras dignissim magna eget bibendum molestie. Ut condimentum hendrerit nunc, a mollis nibh pellentesque id.

Duis mollis nulla sit amet turpis ullamcorper, bibendum volutpat justo auctor. Nulla varius fermentum fringilla. Praesent turpis tellus, feugiat sit amet eros sed, luctus commodo odio. Nunc pulvinar mollis molestie. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc pretium, risus quis vulputate dapibus, justo sem suscipit sapien, eu mollis orci ex mattis purus. Integer id orci sit amet mi maximus lobortis ac nec diam.</string>
    <string-array name="nav_drawer_items">
        <item>Mon Profil</item>
        <item>News</item>
        <item>Événements</item>
        <item>Clubs &amp; Vie Asso</item>
        <item>Généalogie</item>
        <item>Ingénews</item>
        <item>Caféteria</item>
        <item>Bons Plans</item>
        <item>Liste des Salles</item>
    </string-array>
    <string-array name="nav_drawer_options">
        <item>Réglages</item>
    </string-array>
    <string-array name="bullshitHintUser">
        <item>ananas</item>
        <item>oasis</item>
        <item>chameau</item>
        <item>android>iOS</item>
        <item>dromadaire</item>
        <item>printf("oklm")</item>
        <item>heisenberg</item>
        <item>mario</item>
        <item>luigi</item>
        <item>samus</item>
        <item>walterwhite</item>
        <item>kinginthenorth</item>
        <item>motherofdragons</item>
        <item>rickgrimes</item>
        <item>songoku</item>
        <item>fry</item>
        <item>benderbrodriguez</item>
        <item>ironman</item>
        <item>batman</item>
        <item>superman</item>
        <item>catwoman</item>
        <item>wonderwoman</item>
        <item>hawkeye</item>
        <item>hulk</item>
        <item>deadpool</item>
        <item>captainamerica</item>
        <item>blackwidow</item>
        <item>thor</item>
        <item>loki</item>
        <item>joker</item>
        <item>robin</item>
        <item>dracula</item>
        <item>davidfincher</item>
        <item>cobb</item>
        <item>legolas</item>
        <item>bilbonsaquet</item>
        <item>gandalf</item>
        <item>frodonsaquet</item>
        <item>aragorn</item>
        <item>neo</item>
        <item>agentj</item>
        <item>jacksparrow</item>
        <item>sherlockholmes</item>
        <item>doc</item>
        <item>marty</item>
        <item>morty</item>
        <item>rick</item>
        <item>lukeskywalker</item>
        <item>darkvador</item>
        <item>hansolo</item>
        <item>chewbacca</item>
        <item>c3po</item>
        <item>r2d2</item>
        <item>quigonjinn</item>
        <item>obiwankenobi</item>
        <item>anakinskywalker</item>
        <item>jarjarbinks</item>
        <item>jamesbond</item>
        <item>tron</item>
        <item>wolverine</item>
        <item>professeurxavier</item>
    </string-array>
    <string name="MESSAGE_GET_TOKEN">Mauvais Login / Mot de passe</string>
    <string name="MESSAGE_GET_TOKEN_EVENT">(c) Team Sheep Dev</string>
    <string name="MESSAGE_SEND_EMAIL_EVENT">Email invalide</string>
    <string name="MEMORY_SYNC_USER">selfRetain_$_0x128D4_objc</string>
    <string name="MESSAGE_PASS_USER">Oups, erreur de connexion</string>
    <string name="MESSAGE_HISTORY_USER">Connexion au serveur ...</string>
    <string name="MESSAGE_TICKETS_USER">Connexion en cours</string>
    <string name="MACRO_SYNC_SINGLE">base64(json_encode(#MACRO))</string>
    <string name="MESSAGE_SYNC_PUSH">Erreur mémoire cache</string>
    <string name="MESSAGE_DESYNC_PUSH">Bonjour %s !</string>
    <string name="client">client</string>
    <string name="username">username</string>
    <string name="hash">hash</string>
    <string name="tstp">tstp</string>
    <string name="os">os</string>
    <string name="token">token</string>
    <string name="idevent">idevent</string>
    <string name="nav">nav</string>
    <string name="idcmd">idcmd</string>
    <string name="email">email</string>
    <string name="data">data</string>
    <string name="instructions">instructions</string>
    <string name="version">version</string>
    <string name="password">password</string>
    <string name="play_api_push">409995288520</string>
    <string name="google_app_id">409995288520</string>
    <string name="dialog_yes">Oui</string>
    <string name="dialog_ok">D\'accord</string>
    <string name="dialog_pay">Payer</string>
    <string name="dialog_continue">Continuer</string>
    <string name="dialog_choose">Choisir</string>
    <string name="dialog_no">Non</string>
    <string name="dialog_cancel">Annuler</string>
    <string name="dialog_delete">Supprimer</string>
    <string name="dialog_valid">VALIDER</string>
    <string name="dialog_contact">Contacter</string>
    <string name="dialog_close">Fermer</string>
    <string name="dialog_retry">Réessayer</string>
    <string name="dialog_back">Retour</string>
    <string name="dialog_indeed">En effet</string>
    <string name="dialog_shame">Dommage</string>
    <string name="update_title">Mise à jour disponible</string>
    <string name="update_content">Voulez-vous être redirigé vers le Play Store ?\n\nNote : Vous pouvez désactiver la vérification des mises à jour depuis l\'onglet Réglages".</string>
    <string name="about_title">A propos</string>
    <string name="about_content">Cette application est l\'application officielle du BDE ESEOASIS pour Android.\n\nDéveloppeurs :\nFrançois Leparoux\nClément Gouin\n\nIcones : Font-Awesome\n\nSupport technique :\nbde@eseoasis.com</string>
    <string name="lydia_phone">Votre numéro de téléphone portable est utilisé par Lydia afin de lier la commande à votre compte.\nIl peut etre aussi utilisé pour vous inscrire à un évènement. Il ne sera jamais utilisé ormis pour vous prévenir en cas d\'un imprévu.</string>
    <string name="empty_header_event">Aucun évenement trouvé</string>
    <string name="empty_desc_event">Vérifiez votre connexion internet, puis rafraîchissez cette onglet. Sinon, c\'est qu\'on a décidé de pas faire de soirées dans les jours à venir\n(vous allez pouvoir réviser !)</string>
    <string name="empty_header_cart">Vous n\'avez encore rien ajouté\n à votre panier !</string>
    <string name="empty_desc_cart">Vous n\'avez pas faim ?\n\nHey ! Le jour de votre anniversaire,\n un menu vous est offert :)</string>
    <string name="empty_header_tips">Aucun bon plan n\'a été trouvé</string>
    <string name="layout_tutorial_01">Merci !</string>
    <string name="layout_tutorial_02">... d\'avoir installé ou mis à jour notre application.\nLes principales nouveautés sont les suivantes :</string>
    <string name="layout_tutorial_10">Ce n\'est pas un mirage...</string>
    <string name="layout_tutorial_11">Et oui ! Changement de BDE, changement d\'application ! Profitez d\'un moment de fraicheur avec le nouveau thème Oasis de l\'application.</string>
    <string name="layout_tutorial_20">Généalogie</string>
    <string name="layout_tutorial_21">Vous pouvez maintenant accéder à votre arbre généalogique de parrainage depuis l\'application !</string>
    <string name="layout_tutorial_22">Depuis l\'onglet généalogie, effectuez une recherche et observez vos ancêtres.</string>
    <string name="layout_tutorial_30">Pas le temps de niaiser</string>
    <string name="layout_tutorial_31">Vous pouvez dorénavant indiquer que vous allez participer à un évenement d\'un simple clique depuis la liste !</string>
    <string name="layout_tutorial_40">Tout est lié !</string>
    <string name="layout_tutorial_41">Ne perdez rien de l\'activité d\'un club en regardant les articles et évenements associés sur sa description.</string>
    <string name="layout_tutorial_end">Pour fermer ce tutorial, cliquez sur l\'îcone en haut.</string>
    <string name="layout_connect_profile_1">Renseignez les informations suivantes puis validez pour synchroniser vos données.</string>
    <string name="layout_connect_profile_2">Identifiant :</string>
    <string name="layout_connect_profile_3">******</string>
    <string name="layout_connect_profile_4">Mot de passe :</string>
    <string name="layout_view_profile_1">BONJOUR</string>
    <string name="layout_view_profile_2">Vous avez accès à toutes les fonctionnalités, dont la commande à la caféteria.</string>
    <string name="layout_view_profile_3">DÉCONNEXION</string>
    <string name="layout_cartview">TOTAL :</string>
</resources>