<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/color_primary_dark"
                android:text="@string/layout_tutorial_01"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layout_tutorial_02"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/color_primary_dark"
                android:text="@string/layout_tutorial_10"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/tuto_1"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layout_tutorial_11"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/color_primary_dark"
                android:text="@string/layout_tutorial_20"
                android:id="@+id/textView" />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layout_tutorial_21"
                android:id="@+id/textView2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/tuto_2"
                android:layout_gravity="center_horizontal"
                android:id="@+id/imageView2" />

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layout_tutorial_22"
                android:id="@+id/textView5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/color_primary_dark"
                android:text="@string/layout_tutorial_30"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/tuto_3"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layout_tutorial_31"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/color_primary_dark"
                android:text="@string/layout_tutorial_40"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:src="@drawable/tuto_4"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layout_tutorial_41"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/layout_tutorial_end"
                android:layout_marginBottom="36dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>