<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/color_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/container_dropshadow">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_eseo_wide"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/text_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:id="@+id/tvEditProfile" />

            <TextView
                android:text="@string/layout_connect_profile_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEditProfile"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/tvFillData" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_below="@id/tvFillData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:maxLines="1"
                android:singleLine="true"
                android:maxEms="10"
                android:hint="bobsaget"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:id="@+id/etUserID"
                android:layout_alignLeft="@+id/etUserPassword"
                android:layout_alignStart="@+id/etUserPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_connect_profile_2"
                android:textSize="18dp"
                android:layout_marginBottom="16dp"
                android:layout_alignBottom="@id/etUserID"
                android:layout_alignRight="@+id/tvUserPassword"
                android:layout_alignEnd="@+id/tvUserPassword" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_below="@id/etUserID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:maxLines="1"
                android:singleLine="true"
                android:maxEms="10"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:inputType="textPassword"
                android:id="@+id/etUserPassword"
                android:hint="@string/layout_connect_profile_3"
                android:layout_toRightOf="@+id/tvUserPassword"
                android:layout_toEndOf="@+id/tvUserPassword" />

            <TextView
                android:id="@+id/tvUserPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_connect_profile_4"
                android:textSize="18dp"
                android:layout_alignBottom="@+id/etUserPassword"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dialog_continue"
                android:id="@+id/button_disconnect"
                android:layout_below="@id/etUserPassword"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>