<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/container_dropshadow"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_eseo_wide"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="140dp"
                android:layout_height="140dp"
                app:border_width="4dp"
                app:border_color="@color/md_white_1000"
                android:src="@drawable/ic_unknown"
                android:id="@+id/circleView"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/layout_view_profile_1"
                android:gravity="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:text="Random GUY"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/tvUserName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/layout_view_profile_2"
                android:layout_marginTop="16dp"
                android:color="@color/text_light_header"/>


        </LinearLayout>



    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:orientation="horizontal"
        android:background="@color/color_primary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/tvDisconnect"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/md_white_1000"
            android:paddingLeft="32dp"
            android:paddingRight="54dp"
            android:background="@drawable/textview_back_button"
            android:text="@string/layout_view_profile_3"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/imageView"
            android:layout_toStartOf="@+id/imageView" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_right"
            android:layout_marginLeft="-48dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            android:id="@+id/imageView" />

    </RelativeLayout>

</RelativeLayout>