<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="visible" />


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/imgNoCart"
            android:layout_width="wrap_content"
            android:layout_height="85dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="14dp"
            android:src="@drawable/img_nocommand"/>

        <TextView
            android:id="@+id/tvListNothing"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgNoCart"
            android:layout_marginBottom="14dp"
            android:gravity="center"
            android:text="@string/empty_header_cart"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvListNothing2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvListNothing"
            android:gravity="center"
            android:text="@string/empty_desc_cart"
            android:textColor="@color/text_light_header" />

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/relativeLayout6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="?attr/colorPrimary">


        <TextView
            android:id="@+id/tvCart01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/layout_cartview"
            android:textColor="@color/md_white_1000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCartPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@+id/tvCart01"
            android:layout_toRightOf="@+id/tvCart01"
            android:text="0.00€"
            android:textColor="@color/md_white_1000"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fabCommand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relativeLayout6"
        android:layout_alignEnd="@+id/relativeLayout2"
        android:layout_alignRight="@+id/relativeLayout2"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="28dp"
        android:src="@drawable/ic_shopping_cart"
        android:visibility="visible"
        fab:fab_colorNormal="?attr/colorAccent"
        fab:fab_colorPressed="?attr/colorAccent"
        fab:fab_colorRipple="?attr/colorAccent" />

    <View
        android:id="@+id/viewCircle"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_alignBottom="@+id/relativeLayout6"
        android:layout_alignEnd="@+id/relativeLayout2"
        android:layout_alignRight="@+id/relativeLayout2"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="28dp"
        android:background="@drawable/circle_order"
        android:visibility="invisible" />

    <ProgressBar
        android:id="@+id/progressLoading"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_alignBottom="@+id/viewCircle"
        android:layout_alignEnd="@+id/viewCircle"
        android:layout_alignLeft="@+id/viewCircle"
        android:layout_alignRight="@+id/viewCircle"
        android:layout_alignStart="@+id/viewCircle"
        android:layout_alignTop="@+id/viewCircle"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:indeterminate="true"
        android:visibility="visible" />

</RelativeLayout>